# project-knowledge-base

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORE-PRINCIPLES.md  LICENSE  MISSION.md  PKB-MANIFEST.md  README.md  ROADMAP.md  VISION - copia.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: ARCH-001-System-Context.md  ARCH-002-Container.md  ARCH-003-Component.md  ARCH-004-Code-Organization.md
architecture/adr/: ADR-000005-Adopt-C4-Model.md  ADR-000006-Domain-Metamodel-Rules.md
capacitacion-guardias-seguridad-privada/: 00-Indice-General-del-Kit.md  DEFINICION-ENTREGABLE-MINIMO-Proyecto-1.md  README.md
capacitacion-guardias-seguridad-privada/01-fuentes-originales/: MIPSP-CONV-0001-P01.md  MIPSP-CONV-0001-P02.md  MIPSP-CONV-0001-P03.md  MIPSP-CONV-0001-P05.md  MIPSP-CONV-0001-P06.md  (+25 more)
mipsp-editor-kem/: README.md
modelo-integral-mipsp/: Catalogo-Maestro-Competencias-v1.md  MIPSP-Tomo-I-Marco-Metodologico-Ejecutivo.md  MMC-SP-Modelo-Madurez-Competencial-v1.md  Manual-Maestro-PNO-v1.md  Matriz-Riesgo-Formativo-MRF-v1.md  Programa-Gobernanza-Mejora-Continua-v1.md  README.md  Sistema-Inteligencia-Operativa-v1.md
specifications/: PKB-CAPABILITY-CATALOG.md  PKB-GOVERNANCE-POLICY.md  PKB-LIFECYCLE-001-Object-Lifecycle.md  PKB-SPEC-001-Platform-Specification.md  PKB-SPEC-003-Domain-Metamodel.md  PKB-SPEC-003-Ingestion-Pipeline-Specification.md  PKB-SPEC-004-Semantic-Extraction-Prompts.md
tests/: test_cli.py  test_knowledge_object.py  test_metadata_parser.py  test_repository_scanner.py  test_validation_engine.py
tools/: README.md
(+593 files in other folders)
